radicchio.css
/*
 * radicchio.css
 * =============================================================================
 * A Cup of Radicchio. Version 0.9.9
 * =============================================================================
 * A Cup of Radicchio: A personal website of a power looper,
 *                                           a skateboarder,
 *                                       and a coder.
 * =============================================================================
 * Copyright (C) 2016-2021 Radislav (Radicchio) Golubtsov
 */

html, body {
    margin:           0px;
    padding:          0px;
    background-color: #6ec63b;
    color:            #000000;
    font-family:      "Open Sans", sans-serif;
}

#header {
    width:            100%;
    border-width:     0;
    border-spacing:   0;
    font-weight:      bold;
}

#header td {
    padding:          4px;
}

#title {
    color:            #7fd74c;
    font-size:        2em;
}

#header #v-bar-h {
    width:            20px;
    border-right:     4px solid #7fd74c;
}

#header #title-td {
    padding:          14px 20px 8px 6px;
    line-height:      28px;
    background-image: url("/static/img/misc/background-795x195.png");
}

#subtitle {
    line-height:      1;
    color:            #7fd74c;
    font-size:        .6em;
}

#navbar            {}
#header #navbar-td {
    padding-top:      6px;
}

#footer {
    width:            100%;
    border-width:     0;
    border-spacing:   0;
}

#footer td {
    padding:          4px;
}

#footer #v-bar-f {
    width:            20px;
    border-right:     4px solid #7fd74c;
}

#footer #footer-td {
    height:           39px;
    text-align:       right;
    background-image: url("/static/img/misc/background-795x195.png");
}

/*
 * Styling links according to the LVHA-order:
 * :link --> :visited --> :hover --> :active.
 */
a:link, a:visited, a:hover, a:active {
    border:           1px solid #6ec63b;
    padding:          3px;
    text-decoration:  none;
    color:            #4ca419;
}

a:hover {
    border:           1px solid #69df06;
    background-color: #5db52a;
    color:            #7aef17;
}

/* ------------------------------------------------------------------------- */

h1 {
    margin-right:     20px;
    margin-left:      20px;
    padding-right:    10px;
    padding-left:     8px;
    color:            #7aef17;
    font-size:        1.4em;
}

h3 {
    margin-right:     20px;
    margin-left:      20px;
    padding-right:    10px;
    padding-left:     8px;
    color:            #4ca419;
    font-size:        1em;
}

h3 code {
    border-radius:    5px;
    padding:          3px;
    background-color: #5db52a;
    color:            #69df06;
    font-size:        1.2em;
}

p {
    margin:           0px 20px 0px;
    padding:          0px 10px 14px;
    line-height:      1.3em;
    text-align:       justify;
}

p code {
    border-radius:    5px;
    padding:          3px;
    background-color: #5db52a;
    color:            #7aef17;
}

p .emoji {
    width:            1.3em;
    height:           1.3em;
    position:         relative;
    top:              .25em;
}

ul, ol {
    margin:           0px 20px 0px;
    padding:          0px 10px 14px 64px;
    line-height:      1.3em;
    text-align:       justify;
}

ul li, ol li {
    padding-bottom:   6px;
}

pre {
    margin:           0px 54px 14px;
    border-radius:    10px;
    padding:          14px;
    overflow:         auto;
    line-height:      1.3em;
    background-color: #5db52a;
}

/* ------------------------------------------------------------------------- */

#stat-cont {
    margin:           5px 28px 18px;
    border-left:      1px solid #4ca419;
    overflow:         auto;
}

#stat-fit0, #stat-ttt0 {
    width:            100%;
    margin-left:      -1px;
    border-collapse:  collapse;
}

#stat-fit0 td, #stat-ttt0 td {
    border:           1px solid #4ca419;
    padding:          6px;
    vertical-align:   baseline;
}

#p-caption-h td, #p-header-h td, #s-header-h td,
                 #p-header-f td, #s-header-f td,
#m-caption-h td, #m-header-h td, #g-header-h td,
                 #m-header-f td, #g-header-f td {
    text-align:       center;
    font-weight:      bold;
}

                 #p-header-f td, #s-header-f td,
                 #m-header-f td, #g-header-f td {
    vertical-align:   bottom;
}

#p-caption-h td,
#m-caption-h td {
    background-color: #4ca419;
}

#p-header-h td, #s-header-h td,
#p-header-f td, #s-header-f td,
#m-header-h td, #g-header-h td,
#m-header-f td, #g-header-f td {
    background-color: #5db52a;
}

.s-header-h-td, #s-header-h td,
.s-header-f-td, #s-header-f td,
.g-header-h-td, #g-header-h td,
.g-header-f-td                 {
    color:            #7aef17;
}

.p-id-td, .s-id-td, .s-day-td,
.m-id-td,           .m-day-td {
    text-align:       right;
}

          .s-id-td {
    color:            #4ca419;
}

.p-year-td,   .p-subscrn-td,
.m-year-td,
.m-winner-td, .m-result-td,  .g-score-td {
    text-align:       center;
}

#stat-contp {
    margin:           0px 28px 14px;
}

#stat-pager {
    width:            100%;
    border-collapse:  collapse;
}

#stat-pager td {
    border:           0px solid #4ca419;
    vertical-align:   baseline;
}

#stat-pager td.stat-footnote-ndash {
    padding-left:     8px;
}

#stat-pager td.stat-footnote-abbrv {
    padding-left:     8px;
    font-weight:      bold;
}

#stat-pager td.stat-footnote-descr {
    width:            100%;
    padding-left:     8px;
}

#stat-pager td#stat-pager-nav {
    text-align:       right;
}

#stat-pager td#stat-pager-nav span#stat-pager-nav-prev {
    margin-right:     5px;
    color:            #5db52a;
}

#stat-pager td#stat-pager-nav span#stat-pager-nav-next {
    margin-left:      5px;
    color:            #5db52a;
}

#edit-cont {
    margin:           5px 47px 18px 28px;
}

#editor {
    min-width:        100%;
    max-width:        100%;
    width:            100%;
    min-height:       4.7em;
    border:           1px solid #3b9308;
    border-radius:    10px;
    padding:          8px;
    line-height:      1.3em;
    background-color: #cdefed;
}

td .emoji {
    width:            1em;
    height:           1em;
    position:         relative;
    top:              .2em;
}

/* vim:set nu et ts=4 sw=4: */

